--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -29,12 +29,14 @@ dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
 file.reference.FJCalendar.jar=H:\\Data Dode\\Dokumen\\Kuliah\\Semester 10\\Pemrograman Berorientasi Obyek\\33488_PengeluaranRestoran_1605551061_1605551062\\JCalendar\\FJCalendar.jar
 file.reference.jcalendar-1.3.2.jar=H:\\Data Dode\\Dokumen\\Kuliah\\Semester 10\\Pemrograman Berorientasi Obyek\\33488_PengeluaranRestoran_1605551061_1605551062\\JCalendar\\jcalendar-1.3.2.jar
+file.reference.jcalendar-1.3.2.jar-1=jcalendar-1.3.2.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${libs.MySQLDriver.classpath}:\
     ${file.reference.jcalendar-1.3.2.jar}:\
-    ${file.reference.FJCalendar.jar}
+    ${file.reference.FJCalendar.jar}:\
+    ${file.reference.jcalendar-1.3.2.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
