--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -24,7 +24,7 @@ debug.test.classpath=\
 dist.archive.excludes=
 # This directory is removed when the project is cleaned:
 dist.dir=dist
-dist.jar=${dist.dir}/tubes.jar
+dist.jar=${dist.dir}/tubes_fix.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
 file.reference.FJCalendar.jar=H:\\Data Dode\\Dokumen\\Kuliah\\Semester 10\\Pemrograman Berorientasi Obyek\\33488_PengeluaranRestoran_1605551061_1605551062\\JCalendar\\FJCalendar.jar
@@ -61,7 +61,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=
+main.class=indeks.login
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
